# vinecopulib

./: .codacy.yml  .gitignore  .travis.yml  .zenodo.json  CMakeLists.txt  CODE_OF_CONDUCT.md  Doxyfile  Doxyfile-mcss  Doxyfile.in  LICENSE  NEWS.md  README.md  annotated.html  appveyor.yml  bicop_2class_8hpp_source.html  bicop_2fit__controls_8hpp_source.html  bicop_2implementation_2class_8ipp.html  bicop_2implementation_2class_8ipp__dep__incl.map  bicop_2implementation_2class_8ipp__dep__incl.md5  bicop_2implementation_2class_8ipp__incl.map  bicop_2implementation_2class_8ipp__incl.md5  bicop_2implementation_2fit__controls_8ipp.html  bicop_2implementation_2fit__controls_8ipp__dep__incl.map  bicop_2implementation_2fit__controls_8ipp__dep__incl.md5  bicop_2implementation_2fit__controls_8ipp__incl.map  bicop_2implementation_2fit__controls_8ipp__incl.md5  classes.html  classvinecopulib_1_1_bicop-members.html  classvinecopulib_1_1_bicop.html  classvinecopulib_1_1_c_vine_structure.html  classvinecopulib_1_1_d_vine_structure.html  classvinecopulib_1_1_fit_controls_bicop-members.html  classvinecopulib_1_1_fit_controls_bicop.html  classvinecopulib_1_1_fit_controls_vinecop-members.html  classvinecopulib_1_1_fit_controls_vinecop.html  classvinecopulib_1_1_r_vine_matrix-members.html  classvinecopulib_1_1_r_vine_matrix.html  classvinecopulib_1_1_r_vine_structure.html  classvinecopulib_1_1_triangular_array.html  classvinecopulib_1_1_vinecop-members.html  (+86 more)
bindings/python/: CMakeLists.txt  bicop.cpp  converters.cpp  eigen_converters.cpp  findPython.cmake  findPython.py  git_revision.cpp  git_revision.hpp  lib.cpp  pyvinecopulib.cpp
examples/bicop/: CMakeLists.txt
examples/bicop/cmake/: findNlopt.cmake
examples/bicop/src/: CMakeLists.txt  main.cpp
examples/vinecopulib-cmake-example/: CMakeLists.txt
examples/vinecopulib-cmake-example/src/: CMakeLists.txt  vinecopulib_main.cpp
python/src/: CMakeLists.txt  bicop.cpp  eigen_converters.cpp  git_revision.cpp  pyvinecopulib.cpp
python/tests/: CMakeLists.txt  test_bicop_class.py  test_vinecop_class.py
src/: CMakeLists.txt  bicop_archimedean.cpp  bicop_bb1.cpp  bicop_bb6.cpp  bicop_bb7.cpp  bicop_bb8.cpp  bicop_class.cpp  bicop_clayton.cpp  bicop_elliptical.cpp  bicop_family.cpp  bicop_frank.cpp  bicop_gauss.cpp  bicop_gaussian.cpp  bicop_gumbel.cpp  bicop_indep.cpp  bicop_interpolation.cpp  bicop_joe.cpp  bicop_kernel.cpp  bicop_parametric.cpp  bicop_student.cpp  bicop_trafokernel.cpp  boost_tools.cpp  c_tools.c  integration_tools.cpp  interpolation_grid.cpp  ktau.c  optimization_tools.cpp  rvine_matrix.cpp  structselect_tools.cpp  tools_bicopselect.cpp  tools_c.c  tools_eigen.cpp  tools_integration.cpp  tools_optimization.cpp  tools_stats.cpp  tools_structselect.cpp  vinecop_class.cpp
src/apps/: CMakeLists.txt  main.cpp  test_clayton_bicop.cpp  test_frank_bicop.cpp  test_gumbel_bicop.cpp  test_indep_bicop.cpp  test_joe_bicop.cpp  test_normal_bicop.cpp  test_par_bicop.cpp  test_parbicop.cpp
src/bicop/: abstract.cpp  archimedean.cpp  bb1.cpp  bb6.cpp  bb7.cpp  bb8.cpp  bicop_archimedean.cpp  bicop_bb1.cpp  bicop_bb6.cpp  bicop_bb7.cpp  bicop_bb8.cpp  bicop_class.cpp  bicop_clayton.cpp  bicop_elliptical.cpp  bicop_family.cpp  bicop_frank.cpp  bicop_gaussian.cpp  bicop_gumbel.cpp  bicop_indep.cpp  bicop_joe.cpp  bicop_kernel.cpp  bicop_parametric.cpp  bicop_student.cpp  bicop_trafokernel.cpp  class.cpp  clayton.cpp  controls.cpp  elliptical.cpp  family.cpp  fit_controls.cpp  frank.cpp  gaussian.cpp  gumbel.cpp  indep.cpp  joe.cpp  kernel.cpp  parametric.cpp  student.cpp  tll.cpp  tll0.cpp  (+3 more)
src/cmake/: buildTargets.cmake  compilerDefOpt.cmake  findDependencies.cmake  findGSL.cmake  findNlopt.cmake  options.cmake  printInfo.cmake
src/common/: CMakeLists.txt  archimedean_bicop.cpp  bicop.cpp  bicop_archimedean.cpp  bicop_class.cpp  bicop_clayton.cpp  bicop_elliptical.cpp  bicop_frank.cpp  bicop_gauss.cpp  bicop_gumbel.cpp  bicop_indep.cpp  bicop_joe.cpp  bicop_normal.cpp  bicop_parametric.cpp  bicop_student.cpp  clayton_bicop.cpp  dummy.cpp  dummy.h  frank_bicop.cpp  gumbel_bicop.cpp  hfunc.c  indep_bicop.cpp  joe_bicop.cpp  likelihood.c  memoryhandling.c  normal_bicop.cpp  par_bicop.cpp  parbicop.cpp  tools.c
src/common/include/: archimedean_bicop.h  bicop.h  bicop.hpp  bicop_archimedean.hpp  bicop_class.hpp  bicop_clayton.hpp  bicop_elliptical.hpp  bicop_families.hpp  bicop_frank.hpp  bicop_gauss.hpp  bicop_gumbel.hpp  bicop_indep.hpp  bicop_joe.hpp  bicop_normal.hpp  bicop_parametric.hpp  bicop_student.hpp  clayton_bicop.h  frank_bicop.h  gumbel_bicop.h  indep_bicop.h  joe_bicop.h  ktau.h  normal_bicop.h  par_bicop.h  par_bicop.hpp  parbicop.h  parbicop.hpp  vine.h
src/factcop/: class.cpp
src/misc/: interpolation_grid.cpp  tools_c.c  tools_eigen.cpp  tools_integration.cpp  tools_interpolation.cpp  tools_optimization.cpp  tools_stats.cpp
src/mvtdstpack/: mvtdstpack.f
src/stan/: gumbel.stan
src/vinecop/: class.cpp  controls.cpp  fit_controls.cpp  rvine_matrix.cpp  tools_select.cpp  tools_structselect.cpp  vinecop_class.cpp
test/: CMakeLists.txt  test_all.cpp  test_bicop_class.cpp  test_bicop_discrete.cpp  test_bicop_kernel.cpp  test_bicop_parametric.R  test_bicop_parametric.cpp  test_bicop_sanity_checks.cpp  test_bicop_select.cpp  test_bicop_trafokernel.cpp  test_boost_tools.cpp  test_discrete.cpp  test_distribution_tools.cpp  test_rvine_matrix.cpp  test_rvine_structure.cpp  test_serialization.cpp  test_stan.cpp  test_tools_bobyqa.cpp  test_tools_integration.cpp  test_tools_stats.cpp  test_torch.cpp  test_tvine.cpp  test_vinecop_class.cpp  test_vinecop_discrete.cpp  test_vinecop_parametric.R  test_vinecop_sanity_checks.cpp  test_vinecop_select.cpp  test_weights.cpp
test/bindings/python/: CMakeLists.txt  test_bicop_class.py  test_git_revision.py
test/src_test/: CMakeLists.txt  bicop_parametric_test.cpp  kernel_test.cpp  parbicop_test.cpp  r_instance.cpp  test_tools.cpp  trafokernel_test.cpp  vinecop_test.cpp
test/src_test/include/: bicop_parametric_test.hpp  kernel_test.hpp  parbicop_test.hpp  r_instance.hpp  rosenbrock.hpp  (+24 more)
(+1524 files in other folders)
